@@ -143,7 +143,7 @@ TABLE|drules|druleid|ZBX_DATA
 FIELD		|druleid	|t_id		|	|NOT NULL	|0
 FIELD		|proxy_hostid	|t_id		|	|NULL		|0			|1|hosts	|hostid		|RESTRICT
 FIELD		|name		|t_varchar(255)	|''	|NOT NULL	|ZBX_PROXY
-FIELD		|iprange	|t_varchar(255)	|''	|NOT NULL	|ZBX_PROXY
+FIELD		|iprange	|t_varchar(2048)|''	|NOT NULL	|ZBX_PROXY
 FIELD		|delay		|t_integer	|'3600'	|NOT NULL	|ZBX_PROXY
 FIELD		|nextcheck	|t_integer	|'0'	|NOT NULL	|ZBX_NODATA
 FIELD		|status		|t_integer	|'0'	|NOT NULL	|0
@@ -1295,4 +1295,4 @@ INDEX		|2		|application_prototypeid
 TABLE|dbversion||
 FIELD		|mandatory	|t_integer	|'0'	|NOT NULL	|
 FIELD		|optional	|t_integer	|'0'	|NOT NULL	|
-ROW		|2050050	|2050050
+ROW		|2050051	|2050051
