@@ -68,7 +68,7 @@ class CIPRangeValidator extends CIPValidator {
 		$this->maxIPRange = '';
 
 		foreach (explode(',', $ranges) as $range) {
-			$range = trim($range, ' ');
+			$range = trim($range, " \t\n\r");
 
 			if (!$this->isValidMask($range) && !$this->isValidRange($range)) {
 				$this->setError(_s('Invalid IP address range "%1$s".', $range));
